mar-2026-k8s-validating-policy/admission-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "replica-limits-binding.example.com"
spec:
  policyName: "replica-limits-policy.example.com"
  validationActions: [ "Deny" ]
  matchResources:
    namespaceSelector:
      matchLabels:
        policyEnforcement: "strictRules"
